# rcj-code

./: Device Control Thread.xml  README.md  main.xml
Arduino_Files/Files/Blank/: Blank.ino
Arduino_Files/Files/Bluetooth_Wireless_Serial/: rs232_test.ino
Arduino_Files/Files/EncoderRatio_Test/: EncoderRatio_Test.ino
Arduino_Files/Files/SpinLaser/: SpinLaser.ino
Arduino_Files/Files/calibrate_Speed/: calibrate_Speed.ino
Arduino_Files/Files/dc_motor/: dc_motor.ino
Arduino_Files/Files/imu_test/: imu_test.ino
Arduino_Files/Files/multiple_lasers_continous/: multiple_lasers_continous.ino
Arduino_Files/Files/rs232_test/: rs232_test.ino
Arduino_Files/Files/servo_test/: servo_test.ino
Arduino_Files/dc_motor/: dc_motor.ino
Arduino_Files/multiple_lasers/multiple_tof_test/: multiple_tof_test.ino
Arduino_Files/multiple_lasers_continous/: multiple_lasers_continous.ino
Data/: laser_mount_data.xlsx  laser_mount_data2.txt  laser_mount_data4.txt
Data/imu_data/: gyrodrift_test1.txt  gyrodrift_test2.txt  left_up.txt  left_up2.txt  left_up3.txt  left_up4.txt  not_moving.txt  not_moving2.txt
Data/laser_data/: distance_data1.txt  distance_data2.txt  laser_mount_data.txt  laser_mount_data3.txt
Data/laser_data/slam_data/: SLAMData.txt  SLAMData_orig.txt  (+2 more)
Data/map_data/: mazemap.xml
Designs/: Bot v1_0.pptx  Chassis_Design_01.FCStd  Chassis_Design_01.FCStd1  Laser_Spinner.FCStd  Laser_Spinner.FCStd1
Software/: .gitignore  CMakeLists.txt  README.md  navigation_env.bat
Software/AlgorithmTest/: AlgorithmTest.VC.db  AlgorithmTest.sln
Software/AlgorithmTest/AlgorithmTest/: AlgorithmTest.vcxproj  AlgorithmTest.vcxproj.filters  algo.cpp  algo.h
Software/Arduino_Funcs/: Arduino_Funcs.ino
Software/common/: .ARobot.cpp.swp  .main.cpp.swp  ARobot.cpp  ARobot.cpp.autosave  ARobot.h  IMUData.cpp  IMUData.h  LightData.cpp  LightData.h  RangeData.cpp  RangeData.h  Robot.cpp  Robot.h  SerialPort.cpp  SerialPort.h  TempData.cpp  TempData.h  Thread.cpp  Thread.h  UartRx.cpp  UartRx.h  UartTx.cpp  UartTx.h  dataThread.cpp  dataThread.h  main.cpp  navThread.cpp  navThread.cpp.autosave  navThread.h  picamera.cpp  picamera.h  processThread.cpp  processThread.h  sample_closethread.cpp  testThread.cpp  testThread.h
Software/common/Mem/: config.txt  config_test.txt
Software/imu/: MadgwickAHRS.c  MadgwickAHRS.cpp  MadgwickAHRS.h
Software/knn/: .gitignore  kNNFilter.cpp  kNNFilter.h
Software/knn2/: knn.py
Software/letter/: identify.py  mainProg  mainProg.cpp
Software/navigate/: cell.cpp  cell.h  floormap.cpp  floormap.h  globals.h  greedy_dijkstra.cpp  greedy_dijkstra.h  linefitting.cpp  linefitting.h  mazemap.cpp  mazemap.h  mazemap_gen.cpp  mazemap_gen.h  navigate2D.cpp  navigate2D.h  navigateMap.cpp  navigateMap.h  navigate_defs.h  navigate_simul.cpp  navigate_simul.h  navigation.vcxproj  textDetect.h
Software/navigate/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  Navigation.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Software/navigate/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  Navigation.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Software/picam/: picamera.cpp  picamera.h
Software/tests/: ConsoleTests.sln  ConsoleTests.vcxproj  MadgwickAHRS.cpp  MadgwickAHRS.h  imutest.cpp  imutest.h  main.cpp
Software/tests/x64/Debug/: ConsoleTests.ilk  vc140.idb
Software/tests/x64/Debug/ConsoleTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Software/tools/: .gitignore  navigate_main.cpp  navigate_main.h  tools.vcxproj
Software/tools/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tools.write.1.tlog
Software/tools/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tools.lastbuildstate  tools.write.1.tlog
Software/workspace/: comms.sln  navigation.sln
Software/workspace/x64/Debug/: Navigation_d.exp  Navigation_d.ilk  Navigation_d.lib  tinyxml_d.bsc  tinyxml_d.exp  tinyxml_d.lib  tools_d.ilk  tools_d_d.exp  tools_d_d.lib
Software/workspace/x64/Release/: Navigation.exp  Navigation.lib  tinyxml.exp  tinyxml.lib  tools.exp  tools.lib
Software/xml/: tinystr.h  tinyxml.h  tinyxml.vcxproj  xml_defs.h
Software/xml/x64/Debug/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tinyxml.lastbuildstate  tinyxml.write.1.tlog
Software/xml/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tinyxml.write.1.tlog
(+3 files in other folders)
